# neomarket-b2b-service

./: .gitignore  DEPLOYMENT_INFO.md  Dockerfile  README.md  SESSION_NOTES.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
migrations/: README  env.py  script.py.mako
migrations/versions/: 001_initial_b2b_schema.py  f8d7d085f125_add_idempotency_records_table.py
src/: __init__.py  main.py  settings.py
src/models/: __init__.py  base.py  idempotency.py  invoice.py  product.py  sku.py
src/neomarket_b2b_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/routes/: __init__.py  categories.py  inventory.py  invoices.py  moderation.py  products.py  skus.py
src/schemas/: moderation.py  product.py
src/services/: moderation.py
tests/: conftest.py  test_create_product.py  test_moderation_approve.py  test_moderation_hard_block.py  test_moderation_idempotency_and_transitions.py
